feat(rma-warranty):Fixes

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -377,10 +377,10 @@
                   (optionSelected)="branchOptionChanged($event.option.value)"
                 >
                   <mat-option
-                    *ngFor="let option of territoryList |async"
+                    *ngFor="let option of territoryList"
                     [value]="option"
                   >
-                    {{ option.name }} <small>({{ option.warehouse }})</small>
+                    {{ option }}
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.receiving_branch.hasError('required')">
@@ -404,10 +404,10 @@
                   (optionSelected)="branchOptionChanged($event.option.value)"
                 >
                   <mat-option
-                    *ngFor="let option of territoryList |async"
+                    *ngFor="let option of territoryList"
                     [value]="option"
                   >
-                    {{ option.name }} <small>({{ option.warehouse }})</small>
+                    {{ option }}
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.delivery_branch.hasError('required')">
