--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -40,14 +40,11 @@
               <mat-autocomplete
                 autoActiveFirstOption
                 #recievingBranch="matAutocomplete"
-                [displayWith]="getBranchOption"
+                [displayWith]="getCurrentStatus"
                 (optionSelected)="branchOptionChanged($event.option.value)"
               >
-                <mat-option
-                  *ngFor="let option of territoryList | async"
-                  [value]="option"
-                >
-                  {{ option.name }} <small>({{ option.warehouse }})</small>
+                <mat-option *ngFor="let option of territory" [value]="option">
+                  {{ option }}
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.status_from.hasError('required')">
@@ -74,7 +71,7 @@
                   *ngFor="let option of territoryList | async"
                   [value]="option"
                 >
-                  {{ option.name }} <small>({{ option.warehouse }})</small>
+                  {{ option.name }}
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.transfer_branch.hasError('required')">
