feat(rma-warranty):Modified add stock entry page

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -95,6 +95,7 @@
                   [matDatepicker]="warranty_end_date"
                   placeholder="Warranty End Date"
                   formControlName="warranty_end_date"
+                  (dateChange)="dateChanges($event.value)"
                 />
                 <mat-datepicker-toggle
                   matSuffix
