--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
@@ -122,6 +122,7 @@
             matTooltipClass="tooltip"
             (ctrlI)="addItem()"
             (click)="addItem()"
+            [disabled]="button_active"
           >
             Add
           </ion-button>
