feat(rma-warranty):post POC FIxes

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -333,10 +333,10 @@
       *ngIf="
         (warrantyObject?.status_history)[
           warrantyObject?.status_history.length - 1
-        ].delivery_status === 'Upgraded' ||
+        ]?.delivery_status === 'Upgraded' ||
         (warrantyObject?.status_history)[
           warrantyObject?.status_history.length - 1
-        ].delivery_status === 'Replaced'
+        ]?.delivery_status === 'Replaced'
       "
     >
       <ion-row>
@@ -346,7 +346,7 @@
             *ngIf="
               (warrantyObject?.status_history)[
                 warrantyObject?.status_history.length - 1
-              ].delivery_status === 'Upgraded'
+              ]?.delivery_status === 'Upgraded'
             "
           >
             <input
@@ -362,7 +362,7 @@
             *ngIf="
               (warrantyObject?.status_history)[
                 warrantyObject?.status_history.length - 1
-              ].delivery_status === 'Replaced'
+              ]?.delivery_status === 'Replaced'
             "
           >
             <input
@@ -378,7 +378,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              [value]="warrantyObject?.recieving_branch"
+              [value]="warrantyObject?.receiving_branch"
               type="text"
               disabled
               placeholder="Damaged Warehouse"
