--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -9,7 +9,7 @@
             </ion-text>
           </ion-card-title>
         </ion-col>
-        <ion-col class="ion-text-right">
+        <ion-col class="ion-text-right" *ngIf="!dataSource?.data?.length">
           <ion-button
             color="tertiary"
             [routerLink]="['/warranty/stock-entry', 'new', warrantyClaimUuid]"
@@ -79,6 +79,21 @@
         <mat-header-cell *matHeaderCellDef>Completed By</mat-header-cell>
         <mat-cell *matCellDef="let row">
           {{ row.createdBy }}
+        </mat-cell>
+        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="rollback">
+        <mat-header-cell *matHeaderCellDef>Rollback</mat-header-cell>
+        <mat-cell *matCellDef="let row; let i = index">
+          <ion-button
+            fill="clear"
+            class="ion-no-padding"
+            color="danger"
+            (click)="removeStockEntry(row)"
+          >
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-button>
         </mat-cell>
         <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
       </ng-container>
