--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -113,6 +113,24 @@
         <mat-form-field class="mat-input-wrapper">
           <input
             matInput
+            required
+            placeholder="POS Profile"
+            aria-label="POS Profile"
+            [matAutocomplete]="posProfile"
+            formControlName="posProfile"
+          />
+          <mat-autocomplete #posProfile="matAutocomplete">
+            <mat-option
+              *ngFor="let profile of posProfiles |async"
+              [value]="profile.name"
+            >
+              <span>{{profile.name}}</span>
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+        <mat-form-field class="mat-input-wrapper">
+          <input
+            matInput
             placeholder="Authorization Server URL"
             type="text"
             formControlName="authServerURL"
@@ -240,7 +258,12 @@
           </button>
         </mat-form-field>
         <section class="ion-text-right">
-          <mat-checkbox class="example-margin" (ngModelChange)="setFilter($event)" [(ngModel)]="group">In Group</mat-checkbox>
+          <mat-checkbox
+            class="example-margin"
+            (ngModelChange)="setFilter($event)"
+            [(ngModel)]="group"
+            >In Group</mat-checkbox
+          >
         </section>
       </div>
       <table
@@ -269,8 +292,12 @@
         <ng-container matColumnDef="warehouse">
           <th mat-header-cell *matHeaderCellDef>Warehouse</th>
           <td mat-cell *matCellDef="let row">
-            <mat-chip-list  aria-label="Fish selection">
-              <mat-chip *ngFor="let warehouse of getChips(row.warehouse)" color="primary" selected>
+            <mat-chip-list aria-label="Fish selection">
+              <mat-chip
+                *ngFor="let warehouse of getChips(row.warehouse)"
+                color="primary"
+                selected
+              >
                 {{warehouse}}
               </mat-chip>
             </mat-chip-list>
