--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -19,7 +19,7 @@
     <ion-fab-button
       class="fab-position"
       [disabled]="serviceInvoiceForm.invalid"
-      (click)="submitDraft()"
+      (click)="createInvoice()"
     >
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
