--- a/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
+++ b/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
@@ -3,26 +3,12 @@
   <ion-toolbar>
     <ion-title>
       <ion-grid fixed>
-        <ion-row>
-          <ion-col size="6">
             <ion-row>
-              <ion-col size="12">
+              <ion-col >
                 Status : <ion-text color="primary"> {{ exportedJob?.data?.status || data?.data?.status }} </ion-text>
               </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size="12">
-                Parent : <ion-text color="primary"> {{ exportedJob?.data?.parent || data?.data?.parent}} </ion-text>
-              </ion-col>
-            </ion-row>
-          </ion-col>
-
-
-          <ion-col size="6">
-            <ion-row>
-              <ion-col size="6"></ion-col>
-              <ion-col size="6">
-                <ion-buttons *ngIf="state.reset">
+              <ion-col *ngIf="state.reset">
+                <ion-buttons>
                   <ion-button (click)="resetJob()" color="danger">
                     Reset
                   </ion-button>
@@ -30,17 +16,24 @@
               </ion-col>
             </ion-row>
             <ion-row>
-              <ion-col size="6"></ion-col>
-              <ion-col size="6">
-                <ion-buttons  *ngIf="state.retry">
+              <ion-col >
+                Parent : <ion-text color="primary"> {{ exportedJob?.data?.parent || data?.data?.parent}} </ion-text>
+              </ion-col>
+              <ion-col *ngIf="state.retry">
+                <ion-buttons  >
                   <ion-button (click)="retryJob()" color="primary">
                     Requeue
                   </ion-button>
                 </ion-buttons>
               </ion-col>
+              <ion-col *ngIf="state.sync">
+                <ion-buttons  >
+                  <ion-button (click)="syncJob()" color="secondary">
+                    Sync
+                  </ion-button>
+                </ion-buttons>
+              </ion-col>
             </ion-row>
-          </ion-col>
-        </ion-row>
       </ion-grid>
     </ion-title>
   </ion-toolbar>
