feat: serial search page in warranty app

--- a/packages/rma-warranty/src/app/app.component.html
+++ b/packages/rma-warranty/src/app/app.component.html
@@ -67,6 +67,17 @@
               <ion-label>Warranty</ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item
+              *ngIf="loggedIn"
+              routerLink="/serial-search"
+              lines="none"
+              routerLinkActive="active"
+            >
+              <ion-icon slot="start" name="barcode"></ion-icon>
+              <ion-label>Serial Search</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
           <ion-item
             routerDirection="'root'"
             routerLink="/"
