feat(rma-warranty):Added POS option in service invoice form

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -213,7 +213,11 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-            <ion-col> </ion-col>
+            <ion-col>
+              <mat-checkbox formControlName="is_pos">
+                Include Payment(POS)
+              </mat-checkbox>
+            </ion-col>
           </ion-row>
         </ion-grid>
       </ion-card-content>
