--- a/packages/rma-warranty/src/app/serial-ui/serial-info/serial-info.page.html
+++ b/packages/rma-warranty/src/app/serial-ui/serial-info/serial-info.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Serial Details</ion-card-title>
+      <ion-card-title color="tertiary">Serial Details</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-grid class="ion-no-padding">
@@ -101,10 +101,70 @@
   </ion-card>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Serial History</ion-card-title>
+      <ion-row class="align">
+        <ion-col>
+          <ion-card-title>
+            <ion-card-title color="tertiary">Serial History</ion-card-title>
+          </ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-right">
+          <ion-button class="ion-text-right" color="tertiary" (click)="getSerialHistory()">
+            Get History
+          </ion-button>
+        </ion-col>
+      </ion-row>
     </ion-card-header>
-    <ion-card-content>
-      Coming soon
-    </ion-card-content>
+      <table mat-table style="width: 100%; overflow: auto;" [dataSource]="serialHistoryDataSource" class="mat-elevation-z8">
+      
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="eventType">
+          <th mat-header-cell *matHeaderCellDef> Event Type </th>
+          <td mat-cell *matCellDef="let element"> {{element.eventType}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="document_no">
+          <th mat-header-cell *matHeaderCellDef> Doc No </th>
+          <td mat-cell *matCellDef="let element"> {{element.document_no}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="transaction_from">
+          <th mat-header-cell *matHeaderCellDef> Transaction From </th>
+          <td mat-cell *matCellDef="let element"> {{element.transaction_from}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="transaction_to">
+          <th mat-header-cell *matHeaderCellDef> Transaction To </th>
+          <td mat-cell *matCellDef="let element"> {{element.transaction_to}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="document_type">
+          <th mat-header-cell *matHeaderCellDef> Document Type </th>
+          <td mat-cell *matCellDef="let element"> {{element.document_type}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="parent_document">
+          <th mat-header-cell *matHeaderCellDef> Parent Doc </th>
+          <td mat-cell *matCellDef="let element"> 
+            {{element.parent_document}} 
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="created_on">
+          <th mat-header-cell *matHeaderCellDef> Created On </th>
+          <td mat-cell *matCellDef="let element"> {{element.created_on | date:'dd-MM-yyyy'}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="created_by">
+          <th mat-header-cell *matHeaderCellDef> Created By </th>
+          <td mat-cell *matCellDef="let element"> {{element.created_by}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index"></tr>
+      </table>      
   </ion-card>
 </ion-content>
