--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -215,7 +215,7 @@
             </ion-col>
             <ion-col>
               <mat-checkbox formControlName="is_pos">
-                Include Payment(POS)
+                Paid
               </mat-checkbox>
             </ion-col>
           </ion-row>
