feat(excel-rma): Sales return to accept in any warehouse

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
@@ -109,9 +109,9 @@
               >
                 <mat-option
                   *ngFor="let option of filteredWarehouseList | async"
-                  [value]="option.name"
+                  [value]="option"
                 >
-                  {{ option.name }}
+                  {{ option }}
                 </mat-option>
               </mat-autocomplete>
             </mat-form-field>
